--- a/plan/201706.md
+++ b/plan/201706.md
@@ -4,12 +4,12 @@
 
 | 日期 | 版本 |文档负责人 | 说明 | 
 | --- | --- | --- | --- | --- |
-| 2017-05-31 | v1 | jsser | 大纲|
+| 2017-05-31 | v1 | jsser | 201706大纲指定|
 
 ## 团队成员
 | 昵称 | Github |
 | --- | --- |
-| jaychen | [https://github.com/chenjiesuper](https://github.com/chenjiesuper) |
+| jaychen | [https://github.com/chenjiesuper](https://github.com/chenjiesuper |
 | iralance | [https://github.com/iralance](https://github.com/iralance) |
 | jsser | [https://github.com/zhuzhenyu](https://github.com/zhuzhenyu) | 
 
