--- a/plan/201706.md
+++ b/plan/201706.md
@@ -9,7 +9,7 @@
 ## 团队成员
 | 昵称 | Github |
 | --- | --- |
-| jaychen | [https://github.com/chenjiesuper](https://github.com/chenjiesuper |
+| jaychen | [https://github.com/chenjiesuper](https://github.com/chenjiesuper) |
 | iralance | [https://github.com/iralance](https://github.com/iralance) |
 | jsser | [https://github.com/zhuzhenyu](https://github.com/zhuzhenyu) | 
 
