--- a/plan/201706.md
+++ b/plan/201706.md
@@ -1,10 +1,10 @@
-#TeamFat - 201706 团队学习规划
+# TeamFat - 201706 团队学习规划
 
 ## 更新日志
 
-| 日期 | 版本 |文档负责人 | 说明 | 
-| --- | --- | --- | --- | --- |
-| 2017-05-31 | v1 | jsser | 201706大纲指定|
+| 日期 | 版本 | 文档负责人 | 说明 | 
+| --- | --- | --- | --- |
+| 2017-05-31 | v1 | jsser | 201706学习大纲制定 |
 
 ## 团队成员
 
