--- a/plan/201706.md
+++ b/plan/201706.md
@@ -10,7 +10,7 @@
 
 | 昵称 | Github |
 | --- | --- |
-| jaychen | [https://github.com/chenjiesuper](https://github.com/chenjiesuper) |
+| Jay | [https://github.com/chenjiesuper](https://github.com/chenjiesuper) |
 | iralance | [https://github.com/iralance](https://github.com/iralance) |
 | jsser | [https://github.com/zhuzhenyu](https://github.com/zhuzhenyu) | 
 
@@ -38,7 +38,7 @@
 ## 身体健康
 
 * 保持充足睡眠 (>=7小时，最晚不超过凌晨1点睡)
-* 坚持锻炼身体 (微信步数8000+)
+* 坚持锻炼身体 (支付宝步数7200+)
 
 ## 项目
 
@@ -57,5 +57,10 @@
 * 自我成长总结
 * 学习总结
 * 技术分享
+
+## 附加豁免规则
+
+* 除天灾人祸（天灾以气象局告警发布为准，人祸个人被伤害或者亲人陪护等）每人每月有4次豁免机会，不得转让或累计使用
+
 
 
