--- a/plan/201706.md
+++ b/plan/201706.md
@@ -60,7 +60,7 @@
 
 ## 附加豁免规则
 
-* 除天灾人祸（天灾以气象局告警发布为准，人祸个人被伤害或者亲人陪护等）每人每月有4个单次豁免机会，不得转让或累计使用
+* 除天灾人祸（天灾以气象局告警发布为准，人祸个人被伤害或者亲人陪护等）每人每月有4个单次豁免机会，不得转让或累计使用，10点后下班降级为6000+，11点后下班豁免。
 
 
 
