--- a/plan/201706.md
+++ b/plan/201706.md
@@ -1,16 +1,16 @@
-# TeamFat - 201706 团队学习规划
+# TeamFat - 2017Q2 团队学习规划
 
 ## 更新日志
 
 | 日期 | 版本 | 文档负责人 | 说明 | 
 | --- | --- | --- | --- |
-| 2017-05-31 | v1 | jsser | 201706学习大纲制定 |
+| 2017-05-31 | v1 | jsser | 2017Q2 学习大纲制定 |
 
 ## 团队成员
 
 | 昵称 | Github |
 | --- | --- |
-| Jay | [https://github.com/chenjiesuper](https://github.com/chenjiesuper) |
+| jay | [https://github.com/chenjiesuper](https://github.com/chenjiesuper) |
 | iralance | [https://github.com/iralance](https://github.com/iralance) |
 | jsser | [https://github.com/zhuzhenyu](https://github.com/zhuzhenyu) | 
 
@@ -37,30 +37,21 @@
 
 ## 身体健康
 
-* 保持充足睡眠 (>=7小时，最晚不超过凌晨1点睡)
-* 坚持锻炼身体 (支付宝步数7200+)
+* 保持充足睡眠 
+* 坚持锻炼身体
 
 ## 项目
 
-时间待定
-
-* 资料分享系统 [第一周]
-* 短网址转发   [第二周]
-* 在线聊天室	  [第二周]
-* 邮件服务     [第三周]
-* 可扩展的埋点指标监控统计系统 (数据采集 -> 数据处理 -> 数据展示)   [第三周, 第四周]
+* 资料分享系统 
+* 短网址转发   
+* 在线聊天室	 
+* 邮件服务     
+* 可扩展的埋点指标监控统计系统 (数据采集 -> 数据处理 -> 数据展示)  
 
 ## 总结
-
-执行日期：2017-06-28 ~ 2017-06-30
 
 * 自我成长总结
 * 学习总结
 * 技术分享
-
-## 附加豁免规则
-
-* 除天灾人祸（天灾以气象局告警发布为准，人祸个人被伤害或者亲人陪护等）每人每月有4个单次豁免机会，不得转让或累计使用，10点后下班降级为6000+，11点后下班豁免。
-
 
 
